# lightweight-code-editor

./: .gitignore  CMakeLists.txt  GapBuffer.cpp  GapBuffer.h  README.md  TextEditor.cpp  TextEditor.h  editor.cpp  editor.h  gpt_editor_2.txt.txt  lce.cpp  main.cpp  premake4.lua
glad/include/glad/: glad.h
glad/src/: glad.c
src/: main.c
wiki/: Developer.md
